# startup-rs

./: .gitignore  Cargo.toml
startup-base/: Cargo.toml
startup-base/src/: idgenerator.rs  lib.rs
startup-db/: Cargo.toml  README.md
startup-db/src/: lib.rs
startup-http/: Cargo.toml
startup-http/src/: error.rs  lib.rs  serve.rs  trace.rs
startup-jwt/: Cargo.toml
startup-jwt/src/: http.rs  lib.rs
startup-monitoring/: Cargo.toml
startup-monitoring/src/: idgenerator.rs  lib.rs
