[package]
name = "startup-base"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
color-eyre = "0.6.1"
figment = { version = "0.10.6", features = ["env", "yaml"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-zipkin = { version = "0.15.0", features = ["reqwest-client"], default-features = false }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "registry"] }
