[package]
name = "startup-base"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
color-eyre = "0.6.1"
figment = { version = "0.10.6", features = ["env", "yaml"] }
lazy_static = "1.4.0"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "registry"] }
