[package]
name = "startup-base"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
color-eyre = "0.6.2"
figment = { version = "0.10.8", features = ["env", "yaml"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "registry"] }
