[package]
name = "startup-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
log = "0.4.17"
