[package]
name = "startup-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["json"] }
eyre = "0.6.8"
futures-util = "0.3.25"
http-body = "0.4.5"
hyper = "0.14.23"
opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"
opentelemetry-semantic-conventions = "0.10.0"
pin-project = "1.0.12"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tower-http = { version = "0.3.5", features = ["trace", "set-header", "compression-deflate", "compression-gzip", "fs"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
