[package]
name = "startup-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.5", features = ["headers"] }
headers = "0.3.6"
http = "0.2.6"
jsonwebtoken = "8.0.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tracing = "0.1.30"
