[package]
name = "startup-monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-zipkin = { version = "0.16.0", features = ["reqwest-client"], default-features = false }
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
tracing-opentelemetry = "0.18.0"

startup-base = { path = "../startup-base" }
eyre = "0.6.8"
rand = "0.8.5"
tracing = "0.1.37"
